--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             </div>
         </form>
 
-        <div class="todo-container">
-            <ul class="todo-list">
-                <div class="todo">
+        <div id="todo-container" class="todo-container">
+            <ul id="todo-list" class="todo-list">
+                <!-- <div class="todo">
                     <li class="todo-item">Estudar Algoritmo</li>
                     <button class="check-btn"><i class="fas fa-check" aria-hidden="true"></i></button>
                     <button class="trash-btn"><i class="fas fa-trash" aria-hidden="true"></i></button>
@@ -50,7 +50,7 @@
                     <li class="todo-item">Entregar desafio JavaScript</li>
                     <button class="check-btn"><i class="fas fa-check" aria-hidden="true"></i></button>
                     <button class="trash-btn"><i class="fas fa-trash" aria-hidden="true"></i></button>
-                </div>
+                </div> -->
             </ul>
         </div>
     </body>
