--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <i class="fas fa-plus-square"></i>
             </button>
             <div class="select">
-                <select name="todos" class="filter-todo">
+                <select name="todos" class="filter-todo" id="filtro">
                     <option value="all">Todas</option>
                     <option value="completed">Finalizadas</option>
                     <option value="uncompleted">Não Finalizadas</option>
